# wireshark-rusoku-plugin

./: .gitignore  CMakeLists.txt  README.md
include/: capture.h  comm_base.h  comm_rusoku.h  control_packet_headers.h  main.h  pcap.h  pcap_headers.h
kvaser/: CMakeLists.txt
kvaser/inc/: comm_kvaser_apple.h  comm_kvaser_win.h
kvaser/src/: comm_kvaser_apple.c  comm_kvaser_win.c
main/: CMakeLists.txt
main/inc/: capture.h  capture_demo.h  comm_base.h  control_packet.h  debug.h  gopt.h  main.h  pcap.h  pcap_debug.h  pcap_param.h
main/src/: capture.c  capture_demo.c  comm_base.c  control_packet.c  debug.c  gopt.c  main.c  pcap.c  pcap_debug.c  pcap_param.c
profiles/Rusoku/: decode_as_entries  language  preferences  recent  recent_common
rusoku/: CMakeLists.txt
rusoku/inc/: comm_rusoku_apple.h  comm_rusoku_win.h
rusoku/src/: comm_rusoku_apple.c  comm_rusoku_win.c
rusoku/src/res/: extcap.rc  extcap.rc_templ
src/: capture.c  comm_base.c  comm_rusoku.c  gopt-errors.c  gopt.c  main.c  pcap.c
tmp/: canal.cpp  canal.h  canpcap.h  common.h  control.cpp  extcap_example.py  gopt-usage.c  main.cpp  main_extcap_canal.c
